--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,16 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "server-only": "^0.0.1",
-    "autoprefixer": "10.4.15"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.1.2",
