--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "next": "latest",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-lottie": "^1.2.3",
     "server-only": "^0.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.3"
@@ -25,6 +27,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.5.5",
     "@types/react": "18.2.21",
+    "@types/react-lottie": "^1.2.7",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "tailwindcss": "^3.3.3",
