--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
-    "react-lottie": "^1.2.3",
     "server-only": "^0.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.3"
