--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "29.5.5",
     "@types/react": "18.2.21",
     "@types/react-lottie": "^1.2.7",
+    "eslint": "^8.56.0",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "tailwindcss": "^3.3.3",
