--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.3"
   },
