--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.334.0",
