--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-intersection-observer": "^9.8.1",
+    "react-loading-skeleton": "^3.4.0",
     "server-only": "^0.0.1",
     "sonner": "^1.4.0",
     "zod": "^3.22.4",
