--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "date-fns": "^3.3.1",
