--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -16,6 +18,7 @@
     "axios": "^1.5.1",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
+    "emoji-mart": "^5.5.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.334.0",
     "next": "latest",
