--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-loading-skeleton": "^3.4.0",
     "server-only": "^0.0.1",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.3"
